004 create OrderRequestDto and fixed db